# shootEmUp

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  base.frag  base.frag.spv  base.vert  base.vert.spv  cmake_install.cmake  main.cpp
.cache/clangd/index/: BaseBuffer.h.32422D4DA8BEE2DF.idx  BaseVertexDescriptor.h.421F9C211859E883.idx  BufferlessVulkanImage.cpp.32558DF6E3A01034.idx  BufferlessVulkanImage.h.C93BD50756C6DBFC.idx  CameraObject.h.40F16EE102E50314.idx  FileReader.cpp.41EF58F14FCD4EC3.idx  FileReader.h.8DAC98E8B2CB222F.idx  Format.h.C06CC474929AD82A.idx  IBuffer.h.1620C6EA4F5C70FC.idx  ICamera.cpp.1A9276C1B5B957DB.idx  ICamera.h.645D6607613D342A.idx  ICommandBuffer.cpp.D7549B2A61CA9FBA.idx  ICommandBuffer.h.C11DE5A3A3C58E30.idx  ICommandPool.cpp.49D5F6CEDD6ECCD2.idx  ICommandPool.h.238F23C840E9209B.idx  IDepthBuffer.cpp.30FC2936F566EA37.idx  IDepthBuffer.h.0732BAF0DEDBA27E.idx  IFramebuffer.cpp.C16D28D434F7EED8.idx  IFramebuffer.h.9786C7F0C82D0176.idx  IImage.cpp.3E26E80C1A1EE93B.idx  IImage.h.B9FA5A0A6FD3583B.idx  IMaterial.cpp.16958F3434DCD6D2.idx  IMaterial.h.76B0BC92B6381509.idx  IMesh.h.F6234A977C992148.idx  IPipeline.cpp.0450036C3C29CB36.idx  IPipeline.h.B4C0E3C0A33CD86F.idx  (+227 more)
CMakeScripts/: ReRunCMake.make
Engine/Asset/: CMakeLists.txt  Makefile  cmake_install.cmake
Engine/Asset/Asset.xcodeproj/: project.pbxproj
Engine/Asset/CMakeScripts/: ReRunCMake.make
Engine/Asset/Image/: IImage.cpp  IImage.h  ImageFlags.h  StageFlag.h
Engine/Asset/Material/: IMaterial.cpp  IMaterial.h  IShader.h
Engine/Asset/Mesh/: BaseVertexDescriptor.h  Format.h  IMesh.h  IVertexDescriptor.h  Mesh.h  MeshAttributeReaderType.h  MeshReader.cpp  MeshReader.h  RenderQueue.h  VertexAttributeInfo.h  VertexBindingInfo.h
Engine/Asset/Resources/: IResource.h
Engine/Camera/: CMakeLists.txt  Camera.h  CameraObject.h  ICamera.h  Makefile  TPCamera.h  cmake_install.cmake
Engine/Camera/CMakeScripts/: ReRunCMake.make
Engine/Camera/Camera.xcodeproj/: project.pbxproj
Engine/Common/: CMakeLists.txt  Makefile  cmake_install.cmake
Engine/Component/: CMakeLists.txt
Engine/Component/Component/: IComponent.h  State.h  Transform.cpp  Transform.h
Engine/Component/Entity/: Entity.cpp  Entity.h  State.h
Engine/Input/: CMakeLists.txt  IInputKeyboard.h  InputContext.cpp  InputContext.h  InputHandler.cpp  InputHandler.h  InputKeyboard.cpp  InputMap.cpp  InputMap.h  InputSOCD.cpp  InputSOCD.h  InputState.h  KeyCode.h  cmake_install.cmake
Engine/Input/CMakeScripts/: ReRunCMake.make
Engine/Input/Input.xcodeproj/: project.pbxproj
Engine/Physics/: CMakeLists.txt
Engine/Physics/Colliders/: BoxCollider.cpp  BoxCollider.h  Collider.h  ColliderType.h  CollisionCalculator.h  CollisionState.h  SphereCollider.cpp  SphereCollider.h
Engine/Physics/Common/: BoundingBox.cpp  BoundingBox.h
Engine/Physics/Observer/: CollisionEnterObserver.h
Engine/Physics/World/: BoundingBox.h  Cell.cpp  Cell.h  CollisionGraph.h  CollisionInfo.h  CollisionInfoContainer.h  Node.cpp  Node.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  OctreeNodeBlock.h  OctreePoint.cpp  OctreePoint.h  World.cpp  World.h
Engine/Render/: CMakeLists.txt  Makefile  cmake_install.cmake
Engine/Render/AssetWrapper/: BufferlessVulkanImage.cpp  BufferlessVulkanImage.h  VulkanImage.cpp  VulkanImage.h  VulkanMeshData.cpp  VulkanMeshData.h
Engine/Render/Buffer/: BaseBuffer.h  IDepthBuffer.cpp  IDepthBuffer.h  IFramebuffer.h  RenderQueue.h  ShadowmapBuffer.h  VertexBuffer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDepthBuffer.cpp  VulkanDepthBuffer.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h
Engine/Render/CMakeScripts/: ReRunCMake.make
Engine/Render/Command/: ICommandBuffer.h  ICommandPool.cpp  ICommandPool.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h
Engine/Render/Pipeline/: IPipeline.h  IVulkanRenderMeshBufferCreator.cpp  IVulkanRenderMeshBufferCreator.h  VulkanPipeline.cpp  VulkanPipeline.h
Engine/Render/Render/: IRender.cpp  IRender.h  IRenderpass.cpp  IRenderpass.h  VulkanRender.cpp  VulkanRender.h  VulkanRenderpass.cpp  VulkanRenderpass.h
Engine/Render/Render.xcodeproj/: project.pbxproj
Engine/Render/Shader/: VulkanShader.cpp  VulkanShader.h
Engine/Render/Shadowmap/: IShadowmap.h  VulkanOmniShadowmap.cpp  VulkanOmniShadowmap.h
Engine/Render/Swapchain/: ISwapchain.cpp  ISwapchain.h  SwapchainBuffer.h
Engine/Window/: CMakeLists.txt  IWindow.cpp  IWindow.h  Makefile  SDLWindow.cpp  SDLWindow.h  cmake_install.cmake
Engine/Window/CMakeScripts/: ReRunCMake.make
Engine/Window/Window.xcodeproj/: project.pbxproj
Game/Scripts/: Player.cpp  Player.h
Tools/ShaderToCode/: CMakeLists.txt  ShaderType.h  shaderToCode.cpp  vertexStruct.h
include/: tiny_obj_loader.h
include/glm/: fwd.hpp
include/vulkan/: spirv.json  spirv.py  vulkan.hpp
(+22 files in other folders)
